--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body {
     margin: 0 auto;
   }
 
+#tableUsers {
+    position: absolute;
+    right: 3%;
+    top: 30%;
+}
+
 table {
     border-collapse: collapse;
     margin: 0 auto;
@@ -41,4 +47,19 @@ p {
 
 #time-display {
     font-size: 24px;
+}
+
+#start-button{
+    margin: 0 auto;
+}
+
+#background-button{
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    background-color: white;
+    border-radius: none
 }
