--- a/style.css
+++ b/style.css
@@ -63,3 +63,21 @@ p {
     background-color: white;
     border-radius: none
 }
+
+
+@media (max-width: 950px) {
+    #tableUsers {
+        position: absolute;
+        right: 10%;
+        top: 60%;
+        margin-left: 20px;
+    }
+}
+
+@media (max-width: 700px) {
+    #tableUsers {
+        position: absolute;
+        right: 5%;
+        top: 60%;
+    }
+}
